--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 
     <section id="features">
       <div class="row">
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <i class="icon fas fa-check-circle fa-4x"></i>
           <h3>Easy Transmission</h3>
           <p>People transfering the information through the online recent technology in our own place.</p>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 col-sm-12">
         <i class="icon fas fa-bullseye fa-4x"></i>
           <h3>Offers Workplaces</h3>
           <p>There are numbers of technology likes Html,Css,Javascript,C# to build the website.</p>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <i class="icon fas fa-heart fa-4x"></i>
           <h3>Automation Process</h3>
           <p>In Robtics to make process automatically with less human error and human effort inn evloved technology.</p>
